# routes/bookRoutes.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const router = express.Router();
-const bookController = require('../controllers/books')
+const bookController = require('../controllers/books');
+const { isAuthenticated } = require('../middleware/auth');
 
 router.get('/', bookController.getAll);
-router.post('/', bookController.createBook);
-
+router.post('/', isAuthenticated, bookController.createBook);
 router.get('/:id', bookController.getSingle);
-router.put('/:id', bookController.updateBook);
-router.delete('/:id', bookController.deleteBook);
+router.put('/:id', isAuthenticated, bookController.updateBook);
+router.delete('/:id', isAuthenticated, bookController.deleteBook);
 
 module.exports = router;
