# routes/index.js
@@ -1,0 +1,5 @@
+const router = require('express').Router();
+
+router.use('/api-docs', require('./swagger'));
+
+module.exports = router;
